[tool.poetry]
name = "flask-data-science"
version = "0.1.0"
description = ""
authors = ["taninao1122 <tani.naoya1122@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_data_science"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.2"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
